# cerebro

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  cerebro.yml  pyproject.toml  skaffold.env  skaffold.yaml  thehive.yml
.github/workflows/: docker.yml
docs/: cortex-action-operations.md  thehive-api.md  thehive-create-alerts.md
images/: job.dock
k8s/: cerebro.dock  cerebro.yml  configmap-app.yaml  configmap-thehive-webhook-rules.yaml  configmap-worker-bar.yaml  configmap-worker-fail.yaml  configmap-worker-foo.yaml  deployment.yaml  job.dock  rbac.yaml  service.yaml  thehive.yml
neuron/: Dockerfile  pyproject.toml
neuron/src/neuron/: __init__.py  report.py  runtime.py  test.py  thehive.py
src/cerebro/: __init__.py  api.py  auth.py  callback.py
src/cerebro/models/: __init__.py  base.py  cerebro.py  cortex.py
src/cerebro/routers/: internal.py  thehive.py
tests/: alert.json  conftest.py  job.py  test_live.py
tests/live/: conftest.py  test_thehive_http.py
tests/unit/: test_api.py  test_models.py
worker/: Dockerfile  cerebro_neuron.py  job.py  neuron.py  sample.py
