[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebro"
version = "4.0.0.post2"
description = "Blueteam automation orchestrator"
authors = [
    { name = "Plup", email = "plup@plup.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-slim",
    "uvicorn[standard]",
    "kubernetes"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerebro"]

[tool.pytest.ini_options]
markers = [
    "live: TheHive HTTP (set RUN_LIVE_TESTS=1; see README.md)",
]
